--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.8.0",
+    "express": "^4.13.4",
+    "file-loader": "^0.8.5",
     "history": "^2.0.2",
-    "style-loader": "^0.13.1",
     "proxy-middleware": "^0.15.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.15",
     "webpack-dev-middleware": "^1.6.0",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "express": "^4.13.4"
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
